feat(example-fabric-eth-bridge): initial bridge working
